Clase07/04-despliegue-azure/frontend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      env: dev
      app: frontend
  template:
    metadata:
      labels:
        env: dev
        app: frontend
    spec:
      containers:
        - name: frontend
          image: docker17.azurecr.io/frontend
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 3
