Clase07/04-despliegue-azure/backend1-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: backend1-svc
spec:
  type: ClusterIP
  selector:
    env: dev
    app: backend1
  ports:
    - port: 80
      targetPort: 3001
      protocol: TCP
