Clase07/04-despliegue-azure/backend2-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: backend2-svc
spec:
  type: ClusterIP
  selector:
    env: dev
    app: backend2
  ports:
    - port: 80
      targetPort: 3002
      protocol: TCP
